--- a/gallery-images.css
+++ b/gallery-images.css
@@ -60,4 +60,14 @@
   .img-12 {
     background-image: url(images/12.jpeg);
   }
+  .img-13 {
+    background-image: url(images/13.jpeg);
+  }
+  .img-14 {
+    background-image: url(images/14.jpeg);
+  }
+  .img-15 {
+    background-image: url(images/15.jpeg);
+  }
+
   
