added more pictures

--- a/gallery-images.css
+++ b/gallery-images.css
@@ -69,5 +69,25 @@
   .img-15 {
     background-image: url(images/15.jpeg);
   }
-
+  .img-16 {
+    background-image: url(images/16.jpeg);
+  }
+  .img-17 {
+    background-image: url(images/17.jpeg);
+  }
+  .img-18 {
+    background-image: url(images/18.jpeg);
+  }
+  .img-19 {
+    background-image: url(images/19.jpeg);
+  }
+  .img-20 {
+    background-image: url(images/20.jpeg);
+  }
+  .img-21 {
+    background-image: url(images/21.jpeg);
+  }
+  .img-22 {
+    background-image: url(images/22.jpeg);
+  }
   
