--- a/gallery-images.css
+++ b/gallery-images.css
@@ -90,4 +90,9 @@
   .img-22 {
     background-image: url(images/22.jpeg);
   }
-  
+  .img-23 {
+    background-image: url(images/23.jpeg);
+  }
+  .img-24 {
+    background-image: url(images/24.jpeg);
+  }
