--- a/gallery-images.css
+++ b/gallery-images.css
@@ -96,3 +96,9 @@
   .img-24 {
     background-image: url(images/24.jpeg);
   }
+  .img-25 {
+    background-image: url(images/25.jpeg);
+  }
+  .img-26 {
+    background-image: url(images/26.jpeg);
+  }
